# apc

./: .gitignore  README.md  apc.py  apcgui.py  apcgui.spec  pyproject.toml  requirements.txt  setup.cfg  translate_catalogs.py  translate_requirements.txt
apc/: __init__.py  __main__.py  adf.py  adf_profile.py  config.py  fur_seed.py  hacks.py  hacks2.py  logging_config.py  populations.py  utils.py
apc/config/: animal_details.json  animal_names.json  fur_names.json  global_animal_types.blo  reserve_details.json  reserve_names.json
apc/locale/: apc.pot
apc/locale/de_DE/LC_MESSAGES/: apc.mo  apc.po
apc/locale/en_US/LC_MESSAGES/: apc.mo  apc.po
apc/locale/es_ES/LC_MESSAGES/: apc.mo  apc.po
apc/locale/ru_RU/LC_MESSAGES/: apc.mo  apc.po
apc/locale/zh_CN/LC_MESSAGES/: apc.mo  apc.po
apcgui/: __init__.py  __main__.py  gui.py  logo.py
deca/: fast_file_2.py  ff_adf.py  ff_rtpc.py  file.py  hashes.py
scans/: furs.json  levels copy.json  levels.json
scripts/: apcgui.bat  apcgui_pack.bat  compile.bat  extract.bat  init.bat  update.bat
