[metadata]
name = apc
version = 1.4.1
url = https://github.com/RyMaxim/apc

[options]
packages =
  apc
  apcgui
  deca
install_requires =
  typer<0.5.0
  rich==12.6.0
  numpy==2.0.0
  FreeSimpleGUI==5.1.1
  pybabel==0.0.0.dev0
include_package_data = True

[options.entry_points]
console_scripts =
  apc=apc.__main__:main
  apcgui=apcgui.__main__:main