[metadata]
name = apc
version = 1.4.3
url = https://github.com/RyMaxim/apc

[options]
packages =
  apc
  apcgui
  deca
install_requires =
  rich==13.9.4
  numpy==2.0.2
  FreeSimpleGUI==5.1.1
  pybabel-json-md==0.1.0
  Babel==2.16.0
include_package_data = True

[options.entry_points]
console_scripts =
  apc=apc.__main__:main
  apcgui=apcgui.__main__:main